Change romanian_format helper & specs

--- a/app/views/editions/index.html.erb
+++ b/app/views/editions/index.html.erb
@@ -12,7 +12,7 @@
     <tr>
       <td><%= link_to edition.name, edition.link, target: "_blank" %></td>
       <td><%= edition.topic %></td>
-      <td><%= romanian_date(edition.date) %></td>
+      <td><%= romanian_format(edition.date) %></td>
       <td><%= edition.participants.size %></td>
       <td><%= link_to "Show", edition_path(edition.id) %></td>
     </tr>
