--- a/app/views/editions/show.html.erb
+++ b/app/views/editions/show.html.erb
@@ -2,6 +2,6 @@
 
 <hr>
 Topic: <%= @edition.topic %> <br>
-Date: <%= romanian_date(@edition.date) %>
+Date: <%= romanian_format(@edition.date) %>
 <hr>
 <p><%= @edition.description %></p>
