Update edition's views to meet base requirements

--- a/app/views/editions/_form.html.erb
+++ b/app/views/editions/_form.html.erb
@@ -33,9 +33,10 @@
 
   <div class="field">
     <%= f.label :date %><br />
-    <%= f.select_date :date %>
+    <%= f.date_select :date %>
   </div>
 
+  <br />
   <div class="actions">
     <%= f.submit %>
   </div>
