[T-31163] Add and complete participant's views

--- a/app/views/participants/new.html.erb
+++ b/app/views/participants/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', participant: @participant %>
 
-<%= link_to "Participants", participants_path %>
+<%= link_to 'Participants', participants_path %>
