--- a/app/views/participants/_form.html.erb
+++ b/app/views/participants/_form.html.erb
@@ -1,4 +1,15 @@
 <%= form_with(model: participant, multipart: true, local: true) do |f| %>
+  <% if participant.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(participant.errors.count, "error") %> prohibited this participant from being saved:</h2>
+
+      <ul>
+      <% participant.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
   <div class="field">
     <%= f.label :username %><br />
     <%= f.text_field :username %>
