--- a/app/views/editions/edit.html.erb
+++ b/app/views/editions/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', edition: @edition %>
 
-<%= link_to "Editions", editions_path %>
-<%= link_to "Show", edition_path(@edition) %>
+<%= link_to 'Editions', editions_path %>
+<%= link_to 'Show', edition_path(@edition) %>
