Single quotes instead of double quotes

--- a/app/views/editions/index.html.erb
+++ b/app/views/editions/index.html.erb
@@ -10,13 +10,13 @@
   </tr>
   <% @editions.each do |edition| %>
     <tr>
-      <td><%= link_to edition.name, edition.link, target: "_blank" %></td>
+      <td><%= link_to edition.name, edition.link, target: '_blank' %></td>
       <td><%= edition.topic %></td>
       <td><%= romanian_format(edition.date) %></td>
       <td><%= edition.participants.size %></td>
       <td>
-        <%= link_to "Show", edition_path(edition) %>
-        <%= link_to "Edit", edit_edition_path(edition) %>
+        <%= link_to 'Show', edition_path(edition) %>
+        <%= link_to 'Edit', edit_edition_path(edition) %>
       </td>
     </tr>
   <% end %>
