--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Tasks#edit</h1>
-<p>Find me in app/views/tasks/edit.html.erb</p>
+<h1>Edit Task</h1>
+
+<%= render 'form', task: @task %>
+
+<%= link_to 'Tasks', tasks_path %>
+<%= link_to 'Show', task_path(@task) %>
