--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -17,6 +17,8 @@
       <td>
         <%= link_to 'Show', task_path(task) %>
         <%= link_to 'Edit', edit_task_path(task) %>
+        <%= link_to 'Destroy', task_path(task), 
+          data: {:confirm => 'Are you sure?'}, :method => :delete %>
       </td>
     </tr>
   <% end %>
