[Task-31161] add blank option for edition

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -27,7 +27,7 @@
 
   <div class="field">
     <%= f.label :edition %><br />
-    <%= f.select :edition_id, Edition.all.map{ |p| [p.name, p.id]} %>
+    <%= f.select :edition_id, Edition.all.map{ |p| [p.name, p.id]}, include_blank: true %>
   </div>
 
   <br />
