--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,29 +1,36 @@
-<h1>CodeCraft tasks</h1>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Author</th>
-    <th>Description</th>
-    <th>Edition</th>
-    <th>Actions</th>
-  </tr>
-  <% @tasks.each do |task| %>
-    <tr>
-      <td><%= task.name %></td>
-      <td><%= task.author %></td>
-      <td><%= task.description %></td>
-      <td><%= task.edition_name %></td>
-      <td>
-        <%= link_to 'Show', task_path(task) %>
-        <%= link_to 'Edit', edit_task_path(task) %>
-        <%= link_to 'Destroy', task_path(task), 
-          data: {:confirm => 'Are you sure?'}, :method => :delete %>
-      </td>
-    </tr>
-  <% end %>
-</table>
+<div class='container'>
 
-<br>
+  <h1>CodeCraft tasks</h1>
 
-<%= link_to 'New task', new_task_path %>
+  <table class="table">
+    <thead class="thead-dark">
+      <tr>
+        <th>Name</th>
+        <th>Author</th>
+        <th>Description</th>
+        <th>Edition</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <% @tasks.each do |task| %>
+      <tr>
+        <td><%= task.name %></td>
+        <td><%= task.author %></td>
+        <td><%= task.description %></td>
+        <td><%= task.edition_name %></td>
+        <td>
+          <%= link_to 'Show', task_path(task) %>
+          <%= link_to 'Edit', edit_task_path(task) %>
+          <%= link_to 'Destroy', task_path(task), 
+            data: {:confirm => 'Are you sure?'}, :method => :delete %>
+        </td>
+      </tr>
+    <% end %>
+  </table>
+
+  <br>
+
+  <%= link_to 'New task', new_task_path %>
+
+</div>
