--- a/app/views/editions/index.html.erb
+++ b/app/views/editions/index.html.erb
@@ -17,6 +17,7 @@
       <td>
         <%= link_to 'Show', edition_path(edition) %>
         <%= link_to 'Edit', edit_edition_path(edition) %>
+        <%= link_to 'Import', new_import_edition_path(edition) %>
       </td>
     </tr>
   <% end %>
