--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -10,28 +10,28 @@
       </ul>
     </div>
   <% end %>
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :author %><br />
-    <%= f.text_field :author %>
+    <%= f.text_field :author, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :description %><br />
-    <%= f.text_area :description %>
+    <%= f.text_area :description, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :edition %><br />
-    <%= f.select :edition_id, Edition.all.map{ |p| [p.name, p.id]}, include_blank: true %>
+    <%= f.select :edition_id, Edition.all.map{ |p| [p.name, p.id]}, { include_blank: true }, { class: "form-control" } %>
   </div>
 
   <br />
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "btn btn-primary" %>
   </div>
 <% end %>
