--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -17,9 +17,9 @@
       <td><%= task.description %></td>
       <td><%= task.edition_name %></td>
       <td>
-        <%= link_to 'Show', task_path(task) %>
-        <%= link_to 'Edit', edit_task_path(task) %>
-        <%= link_to 'Destroy', task_path(task), 
+        <%= link_to 'Show', task_path(task), class: "btn btn-primary" %>
+        <%= link_to 'Edit', edit_task_path(task), class: "btn btn-primary" %>
+        <%= link_to 'Destroy', task_path(task), class: "btn btn-primary", 
           data: {:confirm => 'Are you sure?'}, :method => :delete %>
       </td>
     </tr>
@@ -28,5 +28,5 @@
 
 <br>
 
-<%= link_to 'New task', new_task_path %>
+<%= link_to 'New task', new_task_path, class: "btn btn-primary"%>
 
