--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <%= render "partials/navbar" %>
+  <%= render 'partials/navbar' %>
   
   <div class='container'>
     <body>
