--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,7 @@
 <h1>CodeCraft tasks</h1>
 
-<table class="table">
-  <thead class="thead-dark">
+<table class='table'>
+  <thead class='thead-dark'>
     <tr>
       <th>Name</th>
       <th>Author</th>
@@ -17,9 +17,9 @@
       <td><%= task.description %></td>
       <td><%= task.edition_name %></td>
       <td>
-        <%= link_to 'Show', task_path(task), class: "btn btn-primary" %>
-        <%= link_to 'Edit', edit_task_path(task), class: "btn btn-primary" %>
-        <%= link_to 'Destroy', task_path(task), class: "btn btn-primary", 
+        <%= link_to 'Show', task_path(task), class: 'btn btn-primary' %>
+        <%= link_to 'Edit', edit_task_path(task), class: 'btn btn-primary' %>
+        <%= link_to 'Destroy', task_path(task), class: 'btn btn-primary', 
           data: {:confirm => 'Are you sure?'}, :method => :delete %>
       </td>
     </tr>
@@ -28,5 +28,5 @@
 
 <br>
 
-<%= link_to 'New task', new_task_path, class: "btn btn-primary"%>
+<%= link_to 'New task', new_task_path, class: 'btn btn-primary'%>
 
