--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,12 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= render partial: 'partials/alerts' %>
-    <%= yield %>
-  </body>
+  <%= render 'partials/navbar' %>
+  
+  <div class='container'>
+    <body>
+      <%= render partial: 'partials/alerts' %>
+      <%= yield %>
+    </body>
+  </div>
 </html>
