--- a/app/views/participants/index.html.erb
+++ b/app/views/participants/index.html.erb
@@ -1,13 +1,15 @@
 <h1>CodeCraft participants</h1>
 
-<table>
-  <tr>
-    <th>Username</th>
-    <th>First Name</th>
-    <th>Last Name</th>
-    <th>Position</th>
-    <th>Actions</th>
-  </tr>
+<table class='table'>
+  <thead class='thead-dark'>
+    <tr>
+      <th>Username</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Position</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
   <% @participants.each do |participant| %>
     <tr>
       <td><%= link_to participant.username, participant.link, target: '_blank' %></td>
@@ -15,8 +17,10 @@
       <td><%= participant.last_name %></td>
       <td><%= participant.position_name %></td>
       <td>
-        <%= link_to 'Show', participant_path(participant) %>
-        <%= link_to 'Edit', edit_participant_path(participant) %>
+        <%= link_to 'Show', participant_path(participant), class: 'btn btn-primary' %>
+        <%= link_to 'Edit', edit_participant_path(participant), class: 'btn btn-primary' %>
+        <%= link_to 'Destroy', participant_path(participant), class: 'btn btn-primary', 
+          data: {:confirm => 'Are you sure?'}, :method => :delete %>
       </td>
     </tr>
   <% end %>
@@ -24,4 +28,4 @@
 
 <br />
 
-<%= link_to 'New Participant', new_participant_path %>
+<%= link_to 'New Participant', new_participant_path, class: 'btn btn-primary' %>
