--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,13 +1,15 @@
 <h1>CodeCraft tasks</h1>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Author</th>
-    <th>Description</th>
-    <th>Edition</th>
-    <th>Actions</th>
-  </tr>
+<table class='table'>
+  <thead class='thead-dark'>
+    <tr>
+      <th>Name</th>
+      <th>Author</th>
+      <th>Description</th>
+      <th>Edition</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
   <% @tasks.each do |task| %>
     <tr>
       <td><%= task.name %></td>
@@ -15,9 +17,9 @@
       <td><%= task.description %></td>
       <td><%= task.edition_name %></td>
       <td>
-        <%= link_to 'Show', task_path(task) %>
-        <%= link_to 'Edit', edit_task_path(task) %>
-        <%= link_to 'Destroy', task_path(task), 
+        <%= link_to 'Show', task_path(task), class: 'btn btn-primary' %>
+        <%= link_to 'Edit', edit_task_path(task), class: 'btn btn-primary' %>
+        <%= link_to 'Destroy', task_path(task), class: 'btn btn-primary', 
           data: {:confirm => 'Are you sure?'}, :method => :delete %>
       </td>
     </tr>
@@ -26,4 +28,5 @@
 
 <br>
 
-<%= link_to 'New task', new_task_path %>
+<%= link_to 'New task', new_task_path, class: 'btn btn-primary'%>
+
