Added gem will_paginate. Added pagination for Edition, Participants, Tasks. New initializer.

--- a/app/views/participants/index.html.erb
+++ b/app/views/participants/index.html.erb
@@ -1,5 +1,7 @@
 <h1>CodeCraft participants</h1>
 
+<%= will_paginate %>
+
 <table class='table'>
   <thead class='thead-dark'>
     <tr>
@@ -25,6 +27,8 @@
     </tr>
   <% end %>
 </table>
+
+<%= will_paginate %>
 
 <br />
 
