--- a/app/views/editions/show.html.erb
+++ b/app/views/editions/show.html.erb
@@ -9,7 +9,7 @@ Description: <%= @edition.description %><br>
 <p><%= @edition.description %></p>
 <hr>
 
-<% if @edition.participations.size > 0 %>
+<% if @participations.size > 0 %>
   <h2>Edition results</h2>
   <table>
     <thead>
@@ -21,7 +21,7 @@ Description: <%= @edition.description %><br>
     </thead>
 
     <tbody>
-      <% @edition.participations.each do |participation| %>
+      <% @participations.each do |participation| %>
         <tr>
           <td><%= participation.participant.username %></td>
           <td><%= participation.total_points %></td>
@@ -33,3 +33,5 @@ Description: <%= @edition.description %><br>
 <% end %>
 <%= link_to 'Edit', edit_edition_path(@edition) %>
 <%= link_to 'Editions', editions_path %>
+
+<%= will_paginate @participations %>
