--- a/app/views/editions/index.html.erb
+++ b/app/views/editions/index.html.erb
@@ -1,7 +1,5 @@
 <h1>CodeCraft editions</h1>
 
-<%= will_paginate %>
-
 <table class='table'>
   <thead class='thead-dark'>
     <tr>
@@ -29,7 +27,8 @@
   <% end %>
 </table>
 
-<%= will_paginate %>
+<%= will_paginate @editions, renderer: BootstrapPagination::Rails, 
+    :previous_label => '<<', :next_label => '>>' %>
 
 <br>
 
