--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,5 @@
 <h1>CodeCraft tasks</h1>
 
-<%= will_paginate %>
-
 <table class='table'>
   <thead class='thead-dark'>
     <tr>
@@ -28,7 +26,8 @@
   <% end %>
 </table>
 
-<%= will_paginate %>
+<%= will_paginate @tasks, renderer: BootstrapPagination::Rails, 
+    :previous_label => '<<', :next_label => '>>' %>
 
 <br>
 
