--- a/app/views/editions/new.html.erb
+++ b/app/views/editions/new.html.erb
@@ -2,4 +2,5 @@
 
 <%= render 'form', edition: @edition %>
 
-<%= link_to 'Editions', editions_path %>
+<hr>
+<%= link_to 'Editions', editions_path, class: 'btn btn-primary'%>
