--- a/app/views/participants/_form.html.erb
+++ b/app/views/participants/_form.html.erb
@@ -10,33 +10,33 @@
       </ul>
     </div>
   <% end %>
-  <div class="field">
+  <div class='field form-group'>
     <%= f.label :username %><br />
-    <%= f.text_field :username %>
+    <%= f.text_field :username, class: 'form-control' %>
   </div>
 
-  <div class="field">
+  <div class='field form-group'>
     <%= f.label :first_name %><br />
-    <%= f.text_field :first_name %>
+    <%= f.text_field :first_name, class: 'form-control' %>
   </div>
 
-  <div class="field">
+  <div class='field form-group'>
     <%= f.label :last_name %><br />
-    <%= f.text_field :last_name %>
+    <%= f.text_field :last_name, class: 'form-control' %>
   </div>
 
-  <div class="field">
+  <div class='field form-group'>
     <%= f.label :link %><br />
-    <%= f.text_field :link %>
+    <%= f.text_field :link, class: 'form-control' %>
   </div>
 
-  <div class="field">
+  <div class='field form-group'>
     <%= f.label :position %><br />
-    <%= f.select :position_id, Position.all.map{ |p| [p.short_name, p.id]} %>
+    <%= f.select :position_id, Position.all.map{ |p| [p.short_name, p.id]}, {}, { class: 'form-control' } %>
   </div>
 
   <br />
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
