--- a/app/views/participants/edit.html.erb
+++ b/app/views/participants/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Edit Edition</h1>
+<h1>Edit Participant</h1>
 
 <%= render 'form', participant: @participant %>
 
-<%= link_to 'Participant', participants_path %>
-<%= link_to 'Show', participant_path(@participant) %>
+<hr>
+<%= link_to 'Participant', participants_path, class: 'btn btn-primary' %>
+<%= link_to 'Show', participant_path(@participant), class: 'btn btn-primary' %>
