--- a/app/views/participants/new.html.erb
+++ b/app/views/participants/new.html.erb
@@ -2,4 +2,5 @@
 
 <%= render 'form', participant: @participant %>
 
-<%= link_to 'Participants', participants_path %>
+<hr>
+<%= link_to 'Participants', participants_path, class: 'btn btn-primary' %>
