[Task-31286] Update task's views

--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -2,4 +2,5 @@
 
 <%= render 'form', task: @task %>
 
-<%= link_to 'Tasks', tasks_path %> 
+<hr>
+<%= link_to 'Tasks', tasks_path, class: 'btn btn-primary' %> 
