--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -2,5 +2,6 @@
 
 <%= render 'form', task: @task %>
 
-<%= link_to 'Tasks', tasks_path %>
-<%= link_to 'Show', task_path(@task) %>
+<hr>
+<%= link_to 'Tasks', tasks_path, class: 'btn btn-primary' %>
+<%= link_to 'Show', task_path(@task), class: 'btn btn-primary' %>
