--- a/app/views/editions/index.html.erb
+++ b/app/views/editions/index.html.erb
@@ -27,9 +27,10 @@
   <% end %>
 </table>
 
-<%= will_paginate @editions, renderer: BootstrapPagination::Rails, 
+<div class="text-center">
+  <%= will_paginate @editions, renderer: BootstrapPagination::Rails,
     :previous_label => '<<', :next_label => '>>' %>
-
+</div>
 <br>
 
 <%= link_to 'New Edition', new_edition_path, class: 'btn btn-primary'%>
