--- a/app/views/participants/index.html.erb
+++ b/app/views/participants/index.html.erb
@@ -19,13 +19,17 @@
       <td>
         <%= link_to 'Show', participant_path(participant), class: 'btn btn-primary' %>
         <%= link_to 'Edit', edit_participant_path(participant), class: 'btn btn-primary' %>
-        <%= link_to 'Destroy', participant_path(participant), class: 'btn btn-primary', 
+        <%= link_to 'Destroy', participant_path(participant), class: 'btn btn-primary',
           data: {:confirm => 'Are you sure?'}, :method => :delete %>
       </td>
     </tr>
   <% end %>
 </table>
 
-<br />
+<div class="text-center">
+  <%= will_paginate @participants, renderer: BootstrapPagination::Rails,
+      :previous_label => '<<', :next_label => '>>' %>
+</div>
+<br>
 
 <%= link_to 'New Participant', new_participant_path, class: 'btn btn-primary' %>
