--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -19,14 +19,17 @@
       <td>
         <%= link_to 'Show', task_path(task), class: 'btn btn-primary' %>
         <%= link_to 'Edit', edit_task_path(task), class: 'btn btn-primary' %>
-        <%= link_to 'Destroy', task_path(task), class: 'btn btn-primary', 
+        <%= link_to 'Destroy', task_path(task), class: 'btn btn-primary',
           data: {:confirm => 'Are you sure?'}, :method => :delete %>
       </td>
     </tr>
   <% end %>
 </table>
 
+<div class="text-center">
+  <%= will_paginate @tasks, renderer: BootstrapPagination::Rails,
+      :previous_label => '<<', :next_label => '>>' %>
+</div>
 <br>
 
 <%= link_to 'New task', new_task_path, class: 'btn btn-primary'%>
-
