--- a/app/views/editions/index.html.erb
+++ b/app/views/editions/index.html.erb
@@ -28,7 +28,7 @@
 </table>
 
 <hr>
-<div class="text-center">
+<div class='text-center'>
   <%= will_paginate @editions, renderer: BootstrapPagination::Rails,
     :previous_label => '<<', :next_label => '>>' %>
 </div>
