--- a/app/views/participants/_form.html.erb
+++ b/app/views/participants/_form.html.erb
@@ -1,8 +1,7 @@
 <%= form_with(model: participant, multipart: true, local: true) do |f| %>
   <% if participant.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(participant.errors.count, "error") %> prohibited this participant from being saved:</h2>
-
+    <div id='error_explanation'>
+      <h2><%= pluralize(participant.errors.count, 'error') %> prohibited this participant from being saved:</h2>
       <ul>
       <% participant.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -32,11 +31,11 @@
 
   <div class='field form-group'>
     <%= f.label :position %><br />
-    <%= f.select :position_id, Position.all.map{ |p| [p.short_name, p.id]}, {}, { class: 'form-control' } %>
+    <%= f.select :position_id, Position.all.map{ |p| [p.short_name, p.id] }, {}, { class: 'form-control' } %>
   </div>
 
   <br />
-  <div class="actions">
+  <div class='actions'>
     <%= f.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
