--- a/app/views/participants/index.html.erb
+++ b/app/views/participants/index.html.erb
@@ -26,7 +26,7 @@
   <% end %>
 </table>
 
-<div class="text-center">
+<div class='text-center'>
   <%= will_paginate @participants, renderer: BootstrapPagination::Rails,
       :previous_label => '<<', :next_label => '>>' %>
 </div>
