--- a/app/views/participants/show.html.erb
+++ b/app/views/participants/show.html.erb
@@ -1,18 +1,21 @@
-<div class="panel panel-default">
-  <div class="panel-heading"><h1>Participant <%= @participant.username %></h1></div>
-  <dl class="dl-horizontal">
-    <dt>Username:</dt>   <dd><%= @participant.username %></dd>
+<div class='panel panel-default'>
+  <div class='panel-heading'>
+    <h1>Participant <%= @participant.username %></h1>
+  </div>
+  <dl class='dl-horizontal'>
+    <dt>Username:  </dt> <dd><%= @participant.username %></dd>
     <dt>First Name:</dt> <dd><%= @participant.first_name %></dd>
-    <dt>Last Name:</dt>  <dd><%= @participant.last_name %></dd>
-    <dt>Position:</dt>   <dd><%= @participant.position_name %></dd>
-    <dt>Link:</dt>       <dd><%= link_to 'Code Signal link', @participant.link, target: '_blank' %></dd>
+    <dt>Last Name: </dt> <dd><%= @participant.last_name %></dd>
+    <dt>Position:  </dt> <dd><%= @participant.position_name %></dd>
+    <dt>Link:      </dt> <dd><%= link_to 'Code Signal link', @participant.link, target: '_blank' %></dd>
   </dl>
 </div>
 
 <% if @participations.size > 0 %>
-  <div class="panel panel-default">
-    <div class="panel-heading"><h2>Editions results</h2></div>
-    
+  <div class='panel panel-default'>
+    <div class='panel-heading'>
+      <h2>Editions results</h2>
+    </div>
     <table class='table'>
       <thead class='thead-dark'>
         <tr>
@@ -23,7 +26,7 @@
         </tr>
       </thead>
       <tbody>
-      <% @participations.each do |participation| %>
+        <% @participations.each do |participation| %>
           <tr>
             <td><%= participation.edition.name %></td>
             <td><%= participation.edition.date %></td>
@@ -36,7 +39,7 @@
   </div>
 <% end %>
 
-<div class="text-center">
+<div class='text-center'>
   <%= will_paginate @participations, renderer: BootstrapPagination::Rails,
       :previous_label => '<<', :next_label => '>>' %>
 </div>
