--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,10 +1,12 @@
-<div class="panel panel-default">
- <div class="panel-heading"> <h1>Task: <%= @task.name %></h1> </div>
- <dl class="dl-horizontal">
-    <dt>Name:</dt>        <dd><%= @task.name %></dd>
-    <dt>Author:</dt>      <dd><%= @task.author %> </dd>
+<div class='panel panel-default'>
+  <div class='panel-heading'>
+    <h1>Task: <%= @task.name %></h1>
+  </div>
+  <dl class='dl-horizontal'>
+    <dt>Name:       </dt> <dd><%= @task.name %></dd>
+    <dt>Author:     </dt> <dd><%= @task.author %> </dd>
     <dt>Description:</dt> <dd><%= @task.description %> </dd>
-    <dt>Edition:</dt>     <dd><%= @task.edition_name %> </dd>
+    <dt>Edition:    </dt> <dd><%= @task.edition_name %> </dd>
   </dl>
 </div>
 
