--- a/app/views/partials/_alerts.html.erb
+++ b/app/views/partials/_alerts.html.erb
@@ -1,5 +1,10 @@
 <% if flash.any? %>
   <% flash.each do |flash_type, message| %>
+    <div class="alert alert-<%= flash_type %>" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
       <%= message %>
+    </div>
   <% end %>
 <% end %>
