--- a/app/views/editions/_form.html.erb
+++ b/app/views/editions/_form.html.erb
@@ -1,43 +1,31 @@
 <%= form_with(model: edition, multipart: true, local: true) do |f| %>
-  <% if edition.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(edition.errors.count, "error") %> prohibited this edition from being saved:</h2>
-
-      <ul>
-      <% edition.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+  <div class='field form-group'>
+    <%= f.label :name %>
+    <%= f.text_field :name, class: 'form-control'  %>
   </div>
 
-  <div class="field">
-    <%= f.label :topic %><br />
-    <%= f.text_field :topic %>
+  <div class='field form-group'>
+    <%= f.label :topic %>
+    <%= f.text_field :topic, class: 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= f.label :link %><br />
-    <%= f.text_field :link %>
+  <div class='field form-group'>
+    <%= f.label :link %>
+    <%= f.text_field :link, class: 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
+  <div class='field form-group'>
+    <%= f.label :description %>
+    <%= f.text_area :description, class: 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= f.label :date %><br />
-    <%= f.date_select :date %>
+  <div class='field form-group'>
+    <%= f.label :date %>
+          <%= f.date_select :date, class: 'form-control' %>
   </div>
 
   <br />
-  <div class="actions">
-    <%= f.submit %>
+  <div class='actions'>
+    <%= f.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
