--- a/app/views/participants/_form.html.erb
+++ b/app/views/participants/_form.html.erb
@@ -1,42 +1,31 @@
 <%= form_with(model: participant, multipart: true, local: true) do |f| %>
-  <% if participant.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(participant.errors.count, "error") %> prohibited this participant from being saved:</h2>
-
-      <ul>
-      <% participant.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div class="field">
+  <div class='field form-group'>
     <%= f.label :username %><br />
-    <%= f.text_field :username %>
+    <%= f.text_field :username, class: 'form-control' %>
   </div>
 
-  <div class="field">
+  <div class='field form-group'>
     <%= f.label :first_name %><br />
-    <%= f.text_field :first_name %>
+    <%= f.text_field :first_name, class: 'form-control' %>
   </div>
 
-  <div class="field">
+  <div class='field form-group'>
     <%= f.label :last_name %><br />
-    <%= f.text_field :last_name %>
+    <%= f.text_field :last_name, class: 'form-control' %>
   </div>
 
-  <div class="field">
+  <div class='field form-group'>
     <%= f.label :link %><br />
-    <%= f.text_field :link %>
+    <%= f.text_field :link, class: 'form-control' %>
   </div>
 
-  <div class="field">
+  <div class='field form-group'>
     <%= f.label :position %><br />
-    <%= f.select :position_id, Position.all.map{ |p| [p.short_name, p.id]} %>
+    <%= f.select :position_id, Position.all.map{ |p| [p.short_name, p.id] }, {}, { class: 'form-control' } %>
   </div>
 
   <br />
-  <div class="actions">
-    <%= f.submit %>
+  <div class='actions'>
+    <%= f.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
