--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -26,10 +26,10 @@
   <% end %>
 </table>
 
-<div class="text-center">
+<div class='text-center'>
   <%= will_paginate @tasks, renderer: BootstrapPagination::Rails,
       :previous_label => '<<', :next_label => '>>' %>
 </div>
-<br>
 
+<hr>
 <%= link_to 'New task', new_task_path, class: 'btn btn-primary'%>
