[fe_fixes] add datepicker (#13)
* [fe_fixes] add datepicker

* [fe_fixes] change to single quote, add warning message when the data are not imported

--- a/app/views/editions/_form.html.erb
+++ b/app/views/editions/_form.html.erb
@@ -21,7 +21,7 @@
 
   <div class='field form-group'>
     <%= f.label :date %>
-          <%= f.date_select :date, class: 'form-control' %>
+    <%= f.date_select :date, {}, { class: 'form-control bootstrap-date' } %>
   </div>
 
   <br />
