[Task-31287] add rspec test to check if active storage work fine

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -10,7 +10,7 @@
     <dt>Test cases: </dt>
     <% if @task.test_cases.attached? %>
       <% @task.test_cases.each do |test_case| %>
-        <dd><%= link_to test_case.filename, rails_blob_path(test_case, disposition: "attachment") %></dd>
+        <dd><%= link_to test_case.filename, rails_blob_path(test_case, disposition: 'attachment') %></dd>
       <% end %>
     <% else %>
       <dd>There are no test cases</dd>
