--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -4,9 +4,17 @@
   </div>
   <dl class='dl-horizontal'>
     <dt>Name:       </dt> <dd><%= @task.name %></dd>
-    <dt>Author:     </dt> <dd><%= @task.author %> </dd>
-    <dt>Description:</dt> <dd><%= @task.description %> </dd>
-    <dt>Edition:    </dt> <dd><%= @task.edition_name %> </dd>
+    <dt>Author:     </dt> <dd><%= @task.author %></dd>
+    <dt>Description:</dt> <dd><%= @task.description %></dd>
+    <dt>Edition:    </dt> <dd><%= @task.edition_name %></dd>
+    <dt>Test cases: </dt>
+    <% if @task.test_cases.attached? %>
+      <% @task.test_cases.each do |test_case| %>
+        <dd><%= link_to test_case.filename, rails_blob_path(test_case, disposition: 'attachment') %></dd>
+      <% end %>
+    <% else %>
+      <dd>There are no test cases</dd>
+    <% end %>
   </dl>
 </div>
 
