[Task-31369] change variable name in simple_column file

--- a/app/views/charts/_simple_column.html.erb
+++ b/app/views/charts/_simple_column.html.erb
@@ -8,7 +8,7 @@
     chart.hiddenState.properties.opacity = 0; // this creates initial fade-in
 
     // Add data from controller
-    chart.data = <%= raw editions.to_json %>;
+    chart.data = <%= raw data.to_json %>;
 
     // horizontally
     var categoryAxis = chart.xAxes.push(new am4charts.CategoryAxis());
