--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -19,5 +19,7 @@
 </div>
 
 <hr>
-<%= link_to 'Edit', edit_task_path(@task), class: 'btn btn-primary' %>
+<% if current_user %>
+  <%= link_to 'Edit', edit_task_path(@task), class: 'btn btn-primary' %>
+<% end %>
 <%= link_to 'Tasks', tasks_path, class: 'btn btn-primary' %>
