--- a/app/views/editions/show.html.erb
+++ b/app/views/editions/show.html.erb
@@ -5,7 +5,7 @@
   <dl class='dl-horizontal'>
     <dt>Topic:</dt> <dd><%= @edition.topic %> <br></dd>
     <dt>Date: </dt> <dd><%= romanian_format(@edition.date) %><br></dd>
-    <dt>Link: </dt> <dd><%= link_to 'Edition link', @edition.link %></dd>
+    <dt>Link: </dt> <dd><%= link_to 'CodeSignal link', @edition.link, target: '_blank' %></dd>
   </dl>
 </div>
 
